backend/cart-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-service
  labels:
    app: cart-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cart-service
  template:
    metadata:
      labels:
        app: cart-service
    spec:
      serviceAccountName: cart-service
      containers:
        - name: cart-service
          image: amazon-clone/cart-service:latest
          imagePullPolicy: IfNotPresent
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8006
          readinessProbe:
            httpGet:
              path: /readyz/
              port: 8006
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz/
              port: 8006
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
