backend/cart-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-service
  labels:
    app: cart-service
spec:
  selector:
    app: cart-service
  ports:
    - port: 80
      targetPort: 8006
      protocol: TCP
  type: ClusterIP
